--- a/resources/lang/it.json
+++ b/resources/lang/it.json
@@ -7,7 +7,7 @@
     "Remarques (allergique, végétarien, etc.)" : "Osservazioni (allergico, vegetariano, etc.)",
     "Je serai là jusqu'au bout de la nuit !" : "Io ci sarò fino alla fine della notte!",
     "Malheureusement, je ne pourrai venir qu'au cocktail" : "Purtroppo, verrò soltanto al cocktail.",
-    "Désolé, mais je ne pourrai pas venir du tout" : "Mi dispiace, ma non posso venire del tutto",
+    "Désolé, mais je ne pourrai pas venir du tout" : "Mi dispiace, ma non posso venire del tutto.",
     "Je serai accompagné de mon/ma conjoint/e" : "Mi accompagna il mio/la mia congiunto/a",
     "Son prénom" : "Il suo cognome",
     "Son nom" : "Il suo nome",
@@ -17,7 +17,7 @@
     "Par manque de place, nous ne serons malheureusement pas en mesure d'accueillir vos enfants. Ce sera l'occasion pour tout le monde de profiter d'une belle journée entre adultes !" : "Per mancanza di spazio, non saremo purtroppo in grado di accogliere i vostri bambini. Questa è l'occasione per tutti di godere di una bella giornata tra adulti!",
     "Nous retrouver" : "Per ritrovarci",
     "Nous faire un cadeau" : "Per farci un regalo",
-    "Non pas que nous vous en demandions un ! Mais si l'envie vous en prenait... et que vous souhaitiez contribuer à votre façon à nous aider à aménager notre petit nid douillet, la voici :" : "Non che te ne chiediamo uno! Ma se ne hai voglia... e vuoi aiutarci a modellare il nostro piccolo nido, eccola :",
+    "Non pas que nous vous en demandions un ! Mais si l'envie vous en prenait... et que vous souhaitiez contribuer à nous aider à aménager notre petit nid douillet, la voici :" : "Non che te ne chiediamo uno! Ma se ne hai voglia... e che vuoi aiutarci a sistemare il nostro piccolo nido, eccola :",
     "Notre liste de mariage" : "La nostra lista di nozze",
     "Ou si vous le préférez, voici les coordonnées de notre nouveau compte commun :" : "Oppure, se lo preferisci, ecco i dettagli del nostro nuovo conto congiunto:",
     "Suisse" : "Svizzera"
