corr. nom <=> prénom en italien

--- a/resources/lang/it.json
+++ b/resources/lang/it.json
@@ -1,8 +1,8 @@
 {
     "Nous répondre" : "Per risponderci",
     "Nous aimerions beaucoup vous compter parmi nous ! Merci de nous répondre avant le 20 avril en utilisant le formulaire ci-dessous." : "Ci farebbe tanto piacere averti con noi! Ti preghiamo di risponderci entro il 20 aprile utilizzando il seguente modulo.",
-    "Prénom" : "Cognome",
-    "Nom" : "Nome",
+    "Prénom" : "Nome",
+    "Nom" : "Cognome",
     "Courriel" : "Mail",
     "Remarques (allergique, végétarien, etc.)" : "Osservazioni (allergico, vegetariano, etc.)",
     "Je serai là jusqu'au bout de la nuit !" : "Io ci sarò fino alla fine della notte!",
